Closed Bug 1464194 Opened 8 years ago Closed 8 years ago

ContentParent::RecvAllocateLayerTreeId doesn't handle if the content parent ID doesn't exist

Categories

(Core :: DOM: Content Processes, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: Alex_Gaynor, Assigned: Alex_Gaynor)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

You end up dying with a null ptr deref. Patch to follow momentarily.
Comment on attachment 8980402 [details] Bug 1464194 - don't crash in ContentParent::RecvAllocateLayerTreeId if the content parent ID doesn't exist; https://reviewboard.mozilla.org/r/246568/#review252998
Attachment #8980402 - Flags: review?(jmathies) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/c48a90984547 don't crash in ContentParent::RecvAllocateLayerTreeId if the content parent ID doesn't exist; r=jimm
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: