Bug 1464194 - don't crash in ContentParent::RecvAllocateLayerTreeId if the content parent ID doesn't exist; r=jimm

MozReview-Commit-ID: FQxcTj3phIV